[gd_scene load_steps=9 format=3 uid="uid://cfpfd8jnybhx4"]

[ext_resource type="Script" path="res://enemy/Enemy.gd" id="1_d3e1a"]
[ext_resource type="Texture2D" uid="uid://bpt28bljt2kjr" path="res://assets/enemy_saucer.png" id="2_4krht"]
[ext_resource type="PackedScene" uid="uid://djox8x1gco4o7" path="res://enemy/EnemyPaths.tscn" id="3_leni0"]
[ext_resource type="PackedScene" uid="uid://cg1kf80wn18of" path="res://explosion/explosion.tscn" id="4_qmr1i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x806b"]
radius = 36.0

[sub_resource type="Animation" id="Animation_hlvqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ryn5m"]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.21, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_coi1i"]
_data = {
"RESET": SubResource("Animation_hlvqb"),
"flash": SubResource("Animation_ryn5m")
}

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_d3e1a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4krht")
hframes = 3

[node name="EnemyPaths" parent="." instance=ExtResource("3_leni0")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x806b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_coi1i")
}

[node name="Explosion" parent="." instance=ExtResource("4_qmr1i")]
visible = false

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
